2013-05-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed
	creation of data modules for bug #2240

	* godmode/servers/plugin.php
	include/javascript/pandora_modules.js
	godmode/agentes/module_manager_editor_plugin.php: Fixed
	the tips of the macros help and change the input of macro
	help from input to a textarea

	* include/functions_html.php
	include/styles/dialog.css
	include/styles/menu.css
	include/styles/jquery-ui-1.10.0.custom.css
	include/styles/pandora.css
	include/javascript/pandora_events.js
	operation/users/user_edit.php
	operation/agentes/stat_win.php
	images/event_responses.png
	images/filter_mc.png
	images/sort_down.png
	images/tick.png
	images/pandora.ico
	images/tick_off.png
	images/pandora.ico.gif
	images/star.png
	images/sort_up.png
	godmode/setup/setup_general.php: A lot of visual
	improvements

2013-05-27 Miguel de Dios <miguel.dedios@artica.es>

	* operation/search_main.php: change the label to show when the list
	of agents don't need pagination.

2013-05-27 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_gis.php: added function "gis_calculate_distance"
	to calculate the distance between to points, and return in the
	international metric system, kilometers.
	
	* operation/agentes/gis_view.php: added column with the show the
	distance with the previous point.

2013-05-27  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Updated data types to allow 64bit integers to be
	  stored in tagente_datos and tagente_datos_inc.

2013-05-24  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	extensions/update_manager/settings.php
	extensions/update_manager/main.php
	godmode/agentes/module_manager.php: Fixed 
	various visual issues like update manager icons
	or width of left tab in godmode sections

	* godmode/agentes/module_manager_editor_plugin.php: 
	Fixed tips of plugins help fields

	* extensions/snmp_explorer.php: avoid interfaces
	without name in snmp explorer